Add unit tests (address #2)

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
             "name": "Muqsit",
             "email": "notmuqsit@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    }
 }
