Use PHPUnit’s TestDox when running unit tests

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,7 +33,7 @@ jobs:
       run: composer install --prefer-dist --no-progress
       
     - name: Run test suite
-      run: ./vendor/bin/phpunit tests
+      run: ./vendor/bin/phpunit tests --testdox
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
